[tool.poetry]
name = "django_encrypted_settings"
version = "0.1.0"
description = "A utility to store encrypt and decrypt django settings files in YAML using Ansible Vault encryption"
authors = ["Dan Brosnan <dpjbrosnan@gmail.com>"]
packages = [{ include = "secret_yaml", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.18.6"
ansible-vault = "^2.1.0"
pdbpp = "^0.10.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.group.development.dependencies]
django = "^5.0.4"
black = "^24.4.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
