[tool.poetry]
name = "django_encrypted_settings"
version = "1.0.0"
description = "A utility to store encrypt and decrypt django settings files in YAML using Ansible Vault encryption"
authors = ["Dan Brosnan <dpjbrosnan@gmail.com>"]
packages = [{ include = "django_encrypted_settings", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.18.6"
ansible-vault = "^2.1.0"
pdbpp = "^0.10.3"
pytest = "^6.2.5"
django = "^5.0.4"
black = "^24.4.1"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.poetry.scripts]
encrypt = "django_encrypted_settings.commands.encrypt:main"
decrypt = "django_encrypted_settings.commands.decrypt:main"
dump    = "django_encrypted_settings.commands.dump:main"
