[tool.poetry]
name = "eyaml"
version = "0.1.0"
description = "A python module to store, encrypt and decrypt secrets variables in an encrypted yaml file using Ansible Vault encryption"
authors = ["Dan Brosnan <dpjbrosnan@gmail.com>"]
packages = [{ include = "eyaml", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.18.6"
ansible-vault = "^2.1.0"
pdbpp = "^0.10.3"
pytest = "^6.2.5"
django = "^5.0.4"
black = "^24.4.1"
django-environ = "^0.11.2"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.poetry.scripts]
eyaml = "eyaml.commands.eyaml:main"
